fix: spacing in index.html

--- a/static/output.css
+++ b/static/output.css
@@ -702,6 +702,10 @@ video {
   gap: 1.5rem;
 }
 
+.gap-8 {
+  gap: 2rem;
+}
+
 .space-y-12 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
   margin-top: calc(3rem * calc(1 - var(--tw-space-y-reverse)));
@@ -1003,6 +1007,10 @@ video {
 
   .md\:justify-start {
     justify-content: flex-start;
+  }
+
+  .md\:gap-0 {
+    gap: 0px;
   }
 
   .md\:pr-8 {
